--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -1,5 +1,5 @@
 <section class="about" id="made">
-  <div class="container">
+  <div class="container container--about">
     <p class="about__top-text">tradition and love</p>
     <h2 class="about__top-title">how it’s made?</h2>
     <div class="about__content">
@@ -10,7 +10,7 @@
               ./images/desktop/cow-desktop-1x.png 1x,
               ./images/desktop/cow-desktop-2x.png 2x
             "
-            media="(min-width:1200px)"
+            media="(min-width:1280px)"
           />
           <source
             srcset="
