--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -1,5 +1,4 @@
 .contact {
-  margin-top: 120px;
   background: linear-gradient(
     to bottom,
     $button-secondary-color 15%,
@@ -14,7 +13,14 @@
   padding: 40px 32px;
   max-width: 280px;
   min-height: 332px;
-  margin: 20px auto;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (max-width: 767px) {
+    &:last-child {
+      margin-bottom: 32px;
+    }
+  }
   @media screen and (min-width: 768px) {
     max-width: 395px;
     margin-bottom: 40px;
@@ -33,13 +39,12 @@
 .contact-div {
   @media screen and (min-width: 768px) {
     display: flex;
-    justify-content: space-evenly;
     .contact-card:first-child {
       margin-left: 18px;
     }
-    .contact-card:last-child {
-      margin-right: 18px;
-    }
+    // .contact-card:last-child {
+    //   margin-right: 18px;
+    // }
   }
   @media screen and (min-width: 1280px) {
     display: flex;
@@ -224,11 +229,14 @@
   color: #ffffff;
   border: 0;
   height: 44px;
-  margin-bottom: 10px;
+
   align-items: center;
   justify-content: center;
   cursor: pointer;
   padding: 0 33px;
+  @media screen and (max-width: 768px) {
+    margin-bottom: 10px;
+  }
 }
 
 .contact-button__svg {
