--- a/src/sass/_made.scss
+++ b/src/sass/_made.scss
@@ -243,7 +243,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    width: 768px;
+    width: 100%;
   }
   @media screen and (min-width: 1280px) {
     width: 100%;
