--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
-    <section class="hero">      
-    <div class="container ">
+    <section class="hero">
+        <div class="container ">
         <div class="hero__wrap">
             <h1 class="hero__title ">ice cream made with <span class="hero__title--passion"> passion </span> </h1>
         <ul class="hero__list">
@@ -14,21 +14,21 @@
         </ul>
         </div>
         <ul class="hero__buttons">
-            <li><button type="button" class=" hero__btn--products" onclick="window.location.href = '#products';">Products</button></li>
-            <li><button type="button" class=" hero__btn--made" onclick="window.location.href = '#products';">How it’s made?</button></li>
+            <li><button type="button" class="hero__button hero__button--products" onclick="window.location.href = '#products';">Products</button></li>
+            <li><button type="button" class="hero__button hero__button--made" onclick="window.location.href = '#products';">How it’s made?</button></li>
         </ul>
          <ul class="hero__about">
             <li class="hero__about--item"> <p class="hero__about--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p> 
             </li>
             <li class="hero__about--item"> 
-                <a class="btn">
-                    <svg class="btn__icon" width="15" height="15">
+                <a class="btn-arrow">
+                    <svg class="btn-arrow__icon" width="15" height="15">
                     <use href="./images/symbol-defs.svg#icon-arrow-only-arrow"></use>
                     </svg>
                 </a> 
             </li>
          </ul>
-    </div> 
+    </div>       
 </section>
 
 
