--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -15,7 +15,7 @@
         </div>
         <ul class="hero__buttons">
             <li><button type="button" class="hero__button hero__button--products" onclick="window.location.href = '#products';">Products</button></li>
-            <li><button type="button" class="hero__button hero__button--made" onclick="window.location.href = '#products';">How it’s made?</button></li>
+            <li><button type="button" class="hero__button hero__button--made" onclick="window.location.href = '#made';">How it’s made?</button></li>
         </ul>
          <ul class="hero__about">
             <li class="hero__about--item"> <p class="hero__about--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p> 
