--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,9 +1,9 @@
-<section class="contact" id="contact">
+<section class="contact" id="Contact">
   <div class="container">
     <div class="contact-div">
       <h1 class="hidden">Contact</h1>
       <article class="contact-card contact-card__anim1">
-        <h2 class="contact-title">cafe</h2>
+        <p class="contact-title">cafe</p>
         <ul class="contact-list">
           <li><p class="contact-text">Chicago</p></li>
           <li>
@@ -24,7 +24,7 @@
         </ul>
       </article>
       <article class="contact-card contact-card__anim2">
-        <h2 class="contact-title contact-title__background-color">FOODTRUCK</h2>
+        <p class="contact-title contact-title__background-color">FOODTRUCK</p>
         <ul class="contact-list">
           <li><p class="contact-text">Los Angeles</p></li>
           <li>
@@ -45,7 +45,7 @@
         </ul>
       </article>
       <article class="contact-card contact-card__anim3">
-        <h2 class="contact-title">cafe</h2>
+        <p class="contact-title">cafe</p>
         <ul class="contact-list">
           <li><p class="contact-text">New York</p></li>
           <li>
