--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,4 @@
-<section class="galerry">
+<section class="galerry" id="Our_products">
   <h2 class="hidden">Gallery</h2>
   <div class="container container--gallery">
     <div class="gallery__box gallery__one">
