--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -1,4 +1,4 @@
-<section class="about" id="made">
+<section class="about" id="How_its_made">
   <div class="container container--about">
     <p class="about__top-text">tradition and love</p>
     <h2 class="about__top-title">how it’s made?</h2>
