--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -54,23 +54,21 @@
     <nav>
       <ul class="tel-menu__list list">
         <li class="tel-menu__item">
-          <a class="tel-menu__link link1 link" href="#Home">Home</a>
+          <a class="tel-menu__link link1 link" href="#hero">Home</a>
         </li>
         <li class="tel-menu__item">
-          <a class="tel-menu__link link2 link" href="#About_us">About us</a>
+          <a class="tel-menu__link link2 link" href="#product">About us</a>
         </li>
         <li class="tel-menu__item">
-          <a class="tel-menu__link link3 link" href="#How_its_made"
+          <a class="tel-menu__link link3 link" href="#how_its_made"
             >How it’s made?</a
           >
         </li>
         <li class="tel-menu__item">
-          <a class="tel-menu__link link4 link" href="#Our_products"
-            >Our products</a
-          >
+          <a class="tel-menu__link link4 link" href="#gallery">Our products</a>
         </li>
         <li class="tel-menu__item">
-          <a class="tel-menu__link link5 link" href="#Contact">Contact</a>
+          <a class="tel-menu__link link5 link" href="#contact">Contact</a>
         </li>
       </ul>
     </nav>
