--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,7 +1,7 @@
 <div class="backdrop is-hidden" data-modal>
   <div class="modal container">
     <button class="modal__button" data-modal-close>
-      <svg width="14" height="14">
+      <svg class="modal__cross" width="14" height="14">
         <use href="./images/symbol-defs.svg#icon-close"></use>
       </svg>
     </button>
