--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -78,6 +78,7 @@ ul {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 500;
 }
 
 .header .container {
@@ -313,14 +314,12 @@ ul {
 }
 
 .hero {
+  position: relative;
   height: 502px;
   padding-top: 194px;
   padding-bottom: 158px;
-  background-image: url(../images/mobile/hero-img-mobile-1x.png);
-  background-repeat: no-repeat;
-  background-position: right -60px bottom;
   background-color: #ffb8ca;
-  background-size: auto;
+  z-index: 5;
 }
 
 @media screen and (min-width: 768px) {
@@ -339,39 +338,54 @@ ul {
   }
 }
 
+.hero::before {
+  max-width: 1280px;
+  margin-right: auto;
+  margin-left: auto;
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-image: url(../images/mobile/hero-img-mobile-1x.png);
+  background-repeat: no-repeat;
+  background-size: 346px 419px;
+  background-position: right -36px bottom;
+  z-index: -1;
+}
+
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-  .hero {
+  .hero::before {
     background-image: url(../images/mobile/hero-img-mobile-2x.png);
     background-size: 346px 419px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .hero {
+  .hero::before {
     background-image: url(../images/tablet/hero-girl-tablet-1x.png), url(../images/tablet/hero-img-tablet-1x.png), url(../images/tablet/hero-milk-tablet-1x.png);
-    background-size: contain;
     background-position: bottom right 32px, bottom right 185px, bottom 16px left 32px;
     background-size: 190px 150px, 335px 373px, 152px 154px;
   }
 }
 
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
-  .hero {
+  .hero::before {
     background-image: url(../images/tablet/hero-girl-tablet-2x.png), url(../images/tablet/hero-img-tablet-2x.png), url(../images/tablet/hero-milk-tablet-2x.png);
   }
 }
 
 @media screen and (min-width: 1280px) {
-  .hero {
+  .hero::before {
     background-image: url(../images/desktop/hero-girl-desktop-1x.png), url(../images/desktop/hero-img-desktop-1x.png), url(../images/desktop/hero-milk-desktop-1x.png);
-    background-size: auto, auto, auto;
     background-position: bottom right 16px, bottom right 229px, bottom 60px left 16px;
     background-size: 304px 241px, 534px 611px, 213px 216px;
   }
 }
 
 @media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (min-resolution: 192dpi), screen and (min-width: 1280px) and (min-resolution: 2dppx) {
-  .hero {
+  .hero::before {
     background-image: url(../images/desktop/hero-girl-desktop-2x.png), url(../images/desktop/hero-img-desktop-2x.png), url(../images/desktop/hero-milk-desktop-2x.png);
   }
 }
@@ -555,14 +569,9 @@ ul {
   }
 }
 
-.hero__btn--products {
-  height: 24px;
-  width: 61.2px;
+.hero__button {
   font-weight: 400;
-  font-size: 8px;
   line-height: 1.25;
-  color: #ffffff;
-  background-color: #d41443;
   cursor: pointer;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -573,23 +582,31 @@ ul {
   border-bottom-right-radius: 50px;
   border: 2px solid transparent;
   font-family: inherit;
-  margin-right: 8px;
   -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
-.hero__btn--products:hover, .hero__btn--products:focus {
+.hero__button--products {
+  height: 24px;
+  width: 61.2px;
+  font-size: 8px;
+  color: #ffffff;
+  background-color: #d41443;
+  margin-right: 8px;
+}
+
+.hero__button--products:hover, .hero__button--products:focus {
   background-color: #c7133e;
 }
 
 @media screen and (min-width: 768px) {
-  .hero__btn--products {
+  .hero__button--products {
     margin-right: 9.2px;
   }
 }
 
 @media screen and (min-width: 1280px) {
-  .hero__btn--products {
+  .hero__button--products {
     height: 40px;
     width: 107px;
     font-weight: 400;
@@ -602,30 +619,16 @@ ul {
   }
 }
 
-.hero__btn--made {
+.hero__button--made {
   height: 24px;
   width: 82.8px;
-  font-weight: 400;
   font-size: 8px;
-  line-height: 1.25;
   color: #c7133e;
   background-color: #ffffff;
-  cursor: pointer;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-top-left-radius: 50px;
-  border-bottom-left-radius: 50px;
-  border-top-right-radius: 50px;
-  border-bottom-right-radius: 50px;
-  border: 2px solid transparent;
-  font-family: inherit;
-  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-  transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
 @media screen and (min-width: 1280px) {
-  .hero__btn--made {
+  .hero__button--made {
     height: 40px;
     width: 138px;
     font-weight: 400;
@@ -634,7 +637,7 @@ ul {
   }
 }
 
-.hero__btn--made:hover, .hero__btn--made:focus {
+.hero__button--made:hover, .hero__button--made:focus {
   background-color: #ecebeb;
 }
 
@@ -726,18 +729,18 @@ ul {
   }
 }
 
-.btn-arrow--icon {
+.btn-arrow__icon {
   -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   fill: #c7133e;
 }
 
-.btn-arrow--icon:hover, .btn-arrow--icon:focus {
+.btn-arrow__icon:hover, .btn-arrow__icon:focus {
   fill: #ffffff;
 }
 
 @media screen and (min-width: 1280px) {
-  .btn-arrow--icon {
+  .btn-arrow__icon {
     width: 25px;
     height: 25px;
   }
@@ -2933,6 +2936,10 @@ ul {
   padding: 0 33px;
 }
 
+.contact-button:hover {
+  background-color: #c7133e;
+}
+
 @media screen and (max-width: 768px) {
   .contact-button {
     margin-bottom: 10px;
@@ -3205,12 +3212,14 @@ ul {
   margin-right: 0;
 }
 
-.social__icon {
-  fill: #ffa5ba;
+.social__link:hover .social__icon {
+  background-color: #d41443;
 }
 
-.social__icon:hover, .social__icon:focus {
-  fill: #d41443;
+.social__icon {
+  fill: #ffffff;
+  background-color: #fea5bb;
+  border-radius: 50%;
 }
 
 .contact--footer {
@@ -3323,8 +3332,10 @@ ul {
 
 .modal__button {
   position: absolute;
-  top: 24px;
-  right: 24px;
+  width: 32px;
+  height: 32px;
+  top: 16px;
+  right: 16px;
   cursor: pointer;
   background-color: transparent;
   border: none;
@@ -3332,6 +3343,24 @@ ul {
 
 .modal__button:hover, .modal__button:focus {
   fill: #c7133e;
+}
+
+.modal__button:hover .modal__cross {
+  stroke: #d41443;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  rotate: 90deg;
+  stroke-width: 10px;
+}
+
+.modal__cross {
+  stroke: #ffffff;
+  stroke-width: 3px;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  rotate: 0;
 }
 
 .modal__text {
@@ -3376,11 +3405,17 @@ ul {
   border-radius: 22px;
   outline: none;
   cursor: pointer;
+  border: 1px solid transparent;
   margin-bottom: 16px;
 }
 
+.form__input:hover {
+  cursor: text;
+  border: 1px solid #c7133e;
+}
+
 .form__input:focus {
-  border-color: 1px solid #c7133e;
+  border: 1px solid #c7133e;
 }
 
 .form__comment {
@@ -3403,11 +3438,16 @@ ul {
   border: none;
   border-radius: 22px;
   outline: none;
-  cursor: pointer;
+  cursor: text;
+  border: 1px solid transparent;
+}
+
+.form__textarea:hover {
+  border: 1px solid #c7133e;
 }
 
 .form__textarea:focus {
-  border-color: 1px solid #c7133e;
+  border: 1px solid #c7133e;
 }
 
 input::-webkit-input-placeholder,
