--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -286,6 +286,8 @@
   width: 25px;
   height: 25px;
   transform: scale(0.6);
+  stroke: #fff;
+  stroke-width: 2px;
   @media screen and (min-width: 768px) {
     width: 45px;
     height: 45px;
