--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -2104,6 +2104,8 @@ ul {
   height: 25px;
   -webkit-transform: scale(0.6);
           transform: scale(0.6);
+  stroke: #fff;
+  stroke-width: 2px;
 }
 
 @media screen and (min-width: 768px) {
