--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,17 +7,25 @@
       </div>
       <div class="social-contact">
         <div class="social">
-          <a href="https://github.com" class="social__link">
+          <a href="https://github.com" class="social__link" target="_blank">
             <svg class="social__icon" width="34" height="34">
               <use href="./images/symbol-defs.svg#icon-github"></use>
             </svg>
           </a>
-          <a href="https://web.telegram.org" class="social__link">
+          <a
+            href="https://web.telegram.org"
+            class="social__link"
+            target="_blank"
+          >
             <svg class="social__icon" width="34" height="34">
               <use href="./images/symbol-defs.svg#icon-telegram"></use>
             </svg>
           </a>
-          <a href="https://www.facebook.com" class="social__link">
+          <a
+            href="https://www.facebook.com"
+            class="social__link"
+            target="_blank"
+          >
             <svg class="social__icon" width="34" height="34">
               <use href="./images/symbol-defs.svg#icon-facebook"></use>
             </svg>
