--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,7 +7,12 @@
       </div>
       <div class="social-contact">
         <div class="social">
-          <a href="https://github.com" class="social__link" target="_blank">
+          <a
+            href="https://github.com"
+            class="social__link"
+            target="_blank"
+            rel="noopener noreferrer nofolow"
+          >
             <svg class="social__icon" width="34" height="34">
               <use href="./images/symbol-defs.svg#icon-github"></use>
             </svg>
@@ -16,6 +21,7 @@
             href="https://web.telegram.org"
             class="social__link"
             target="_blank"
+            rel="noopener noreferrer nofolow"
           >
             <svg class="social__icon" width="34" height="34">
               <use href="./images/symbol-defs.svg#icon-telegram"></use>
@@ -25,6 +31,7 @@
             href="https://www.facebook.com"
             class="social__link"
             target="_blank"
+            rel="noopener noreferrer nofolow"
           >
             <svg class="social__icon" width="34" height="34">
               <use href="./images/symbol-defs.svg#icon-facebook"></use>
