--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -45,7 +45,7 @@
         <use href="./images/symbol-defs.svg#icon-close"></use>
       </svg>
     </button>
-    <button class="tel-menu__button" type="button">
+    <button data-modal-open class="tel-menu__button" type="button">
       Buy now
       <svg class="tel-buttot-svg" width="8" height="11">
         <use href="./images/symbol-defs.svg#icon-button-arrow"></use>
