--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -45,7 +45,7 @@
         <use href="./images/symbol-defs.svg#icon-close"></use>
       </svg>
     </button>
-    <button data-modal-open class="tel-menu__button" type="button">
+    <button class="tel-menu__button tel-modal--open" type="button">
       Buy now
       <svg class="tel-buttot-svg" width="8" height="11">
         <use href="./images/symbol-defs.svg#icon-button-arrow"></use>
@@ -57,18 +57,20 @@
           <a class="tel-menu__link link1 link" href="#hero">Home</a>
         </li>
         <li class="tel-menu__item">
-          <a class="tel-menu__link link2 link" href="#product">About us</a>
+          <a class="tel-menu__link link2 link" href="#About_us">About us</a>
         </li>
         <li class="tel-menu__item">
-          <a class="tel-menu__link link3 link" href="#how_its_made"
+          <a class="tel-menu__link link3 link" href="#How_its_made"
             >How it’s made?</a
           >
         </li>
         <li class="tel-menu__item">
-          <a class="tel-menu__link link4 link" href="#gallery">Our products</a>
+          <a class="tel-menu__link link4 link" href="#Our_products"
+            >Our products</a
+          >
         </li>
         <li class="tel-menu__item">
-          <a class="tel-menu__link link5 link" href="#contact">Contact</a>
+          <a class="tel-menu__link link5 link" href="#Contact">Contact</a>
         </li>
       </ul>
     </nav>
