--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,4 +1,4 @@
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop is-hidden backdrop-tel" data-modal>
   <div class="modal container">
     <button class="modal__button" data-modal-close>
       <svg class="modal__cross" width="14" height="14">
