--- a/src/partials/product.html
+++ b/src/partials/product.html
@@ -35,7 +35,7 @@
           class="products-list__button products-list__button--cream"
           type="button"
         >
-          <svg class="button-icon" width="20" height="20">
+          <svg class="button-icon">
             <use href="./images/symbol-defs.svg#icon-arrow-only-arrow"></use>
           </svg>
         </button>
@@ -72,7 +72,7 @@
           class="products-list__button products-list__button--coffee"
           type="button"
         >
-          <svg class="button-icon" width="20" height="20">
+          <svg class="button-icon">
             <use href="./images/symbol-defs.svg#icon-arrow-only-arrow"></use>
           </svg>
         </button>
@@ -109,7 +109,7 @@
           class="products-list__button products-list__button--milkshakes"
           type="button"
         >
-          <svg class="button-icon" width="20" height="20">
+          <svg class="button-icon">
             <use href="./images/symbol-defs.svg#icon-arrow-only-arrow"></use>
           </svg>
         </button>
