--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -9,6 +9,7 @@
   height: 100%;
   background: rgba(46, 6, 5, 0.3);
   transition: opacity 250ms;
+  overflow-y: scroll;
 }
 
 .is-hidden {
@@ -24,14 +25,11 @@
 .modal {
   max-width: 498px;
   width: calc(100% - 15px);
-
   position: absolute;
   top: 50%;
   left: 50%;
-
   transform: translate(-50%, -50%);
   z-index: 1000;
-
   background-color: $ice-cream-pl-bg-color;
   background-image: url(../images/desktop/milk-desktop-1x.png);
   border-radius: 24px;
@@ -40,6 +38,9 @@
     opacity: 1;
     pointer-events: auto;
     overflow-y: auto;
+  }
+  @media screen and (max-width: 1400px) {
+    transform: translate(-50%, -40%);
   }
 }
 
