--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1795,8 +1795,10 @@ ul {
 }
 
 .gallery__img {
-  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .galerry__see {
@@ -3300,6 +3302,7 @@ ul {
   background: rgba(46, 6, 5, 0.3);
   -webkit-transition: opacity 250ms;
   transition: opacity 250ms;
+  overflow-y: scroll;
 }
 
 .is-hidden {
@@ -3332,6 +3335,13 @@ ul {
   opacity: 1;
   pointer-events: auto;
   overflow-y: auto;
+}
+
+@media screen and (max-width: 1400px) {
+  .modal {
+    -webkit-transform: translate(-50%, -40%);
+            transform: translate(-50%, -40%);
+  }
 }
 
 .modal__button {
